# carve

./: .travis.yml  Makefile  README.md  pyproject.toml
carve/: __init__.py  carve.py  curried.py
ci/: release.py
tests/: test_benchmark.py  test_dict.py
